style.css
/* ... */
#skills {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center; /* Центрирует текст внутри блоков */
    background-image: url('skills_bg.jpg');
}
  
#skills h2 {
    margin-bottom: 20px; /* Отступ заголовка от секции навыков */
}
  
.skills-slider {
    width: 40%; /* Определяет ширину слайдера */
    height: 70vh;
    padding: 20px; /* Отступ внутри блока, чтобы контент не прилипал к границам */
    background: white; /* Фон для слайдера */
    border-radius: 10px; /* Скругление углов */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Тень с эффектом размытия */
    margin-top: 20px; /* Отступ сверху */
    align-self: center; /* Центрировать слайдер по горизонтали относительно родителя */
    opacity: 1;
}
  
.skills-section {
    display: none; /* Скрыть секции по умолчанию */
}

.skills-section.active {
    display: flex;
    justify-content: center; /* Центрирование навыков по горизонтали */
    flex-wrap: wrap;
}
  
.skills-section h3 {
    width: 100%; /* Заставляет заголовок занимать всю ширину, чтобы он был над колонками */
    margin-bottom: 10px; /* Отступ заголовка от навыков */
}
  
.skill {
    width: calc(50% - 10px); /* Расчет ширины каждого навыка с учетом отступов */
    margin: 5px; /* Отступы вокруг навыка */
    box-sizing: border-box; /* Учитываем padding и border в общей ширине элемента */
}
  
#skills i{
    font-size: 20px;
    transition: transform 0.5s;
}

#skills img{
    transition: transform 0.5s;
}

.skill p {
    position: relative; /* для позиционирования абсолютно позиционированных дочерних элементов */
    transition: transform 0.5s;
}

.base-knowledge {
    position: absolute; /* Абсолютное позиционирование внутри p */
    right: 0; /* Размещаем в самом правом крае p */
    white-space: nowrap; /* Чтобы текст не переносился */
    transform: translateX(100%); /* Начальное положение справа за пределами видимости */
    opacity: 0; /* Сделать текст полностью прозрачным */
    transition: transform 0.5s ease, opacity 0.5s ease; /* Анимация для перемещения и видимости */
}

.skill:hover .base-knowledge {
    transform: translateX(0%); /* Возвращаем на видимую часть при наведении */
    opacity: 1; /* Сделать текст видимым */
}

.skill:hover i, .skill:hover img {
    transform: scale(1.5);
}

.hard-skills .skill:hover p {
    transform: translateX(-30px);
}

/* Ключевые кадры для анимации вращения */
@keyframes flip {
    from {
        transform: rotateY(0);
    }
    to {
        transform: rotateY(360deg);
    }
}

@keyframes slideIn {
    from {
        transform: translateY(0);
    }
    to {
        transform: translateY(100%);
    }
}

/* Класс для анимации */
.flip-in {
    animation: flip 0.7s ease-out;
}

.toggle {
    cursor: pointer;
    color: black;
    background-color: #f8f9fa; /* Цвет фона кнопки */
    border: 1px solid #ddd; /* Граница кнопки */
    padding: 10px 20px; /* Внутренний отступ кнопки */
    margin-top: 20px; /* Отступ сверху */
    border-radius: 5px; /* Скругление углов */
    transition: background-color 0.3s, color 0.3s; /* Анимация для цвета и фона */
}

.toggle:hover {
    background-color: #e2e6ea; /* Цвет фона при наведении */
    color: #495057; /* Цвет текста при наведении */
}
  
#projects::before {
    content: ""; /* Убираем текст из содержимого */
    display: block; /* Делаем элемент блочным для настройки ширины и высоты */
    margin: 0 auto; /* Центрируем блок по горизонтали */
    width: 100%; /* Ширина линии, можете настроить под свои нужды */
    height: 1px; /* Высота линии */
    background: #333; /* Цвет линии */
    margin-bottom: 20px; /* Отступ снизу, чтобы отделить от текста раздела */
}

#projects {
    position: relative; /* Для позиционирования кнопок */
    height: auto;
}

#projects .slider {
    overflow: hidden; /* Скрываем элементы за пределами слайдера */
}

#projects .slide {
    display: none; /* Скрыть все слайды */
    opacity: 0;
    transition: opacity 0.5s ease; /* Плавная анимация */
}

#projects .slide.active {
    display: flex;; /* Показать активный слайд */
    flex-direction: column;
    align-items: flex-start; /* Выравнивание содержимого слева */
    padding: 20px; /* Дополнительный отступ внутри слайда */
    opacity: 1;
}

#projects .slide h3 {
    font-size: 24px; /* Увеличение размера шрифта заголовка */
    align-self: flex-start;
    margin-bottom: 35px; /* Отступ заголовка от описания проекта */
    transition: color 0.3s ease; /* Анимация для цвета заголовка */
}

#projects .slide:hover h3 {
    color: #ffa500; /* Цвет заголовка при наведении */
}

#projects .content {
    font-size: 1.2rem;
    flex-grow: 1; /* Заставляет содержимое занимать всё доступное пространство */
}

#projects .project-description {
    text-align: left;
    width: 80%; /* Ограничение ширины описания проекта */
    margin-bottom: 50px; /* Отступ описания проекта от списка технологий */
}

#projects .technologies-used {
    align-self: center; /* Выравнивание списка технологий по центру слайда */
    text-align: left;
    width: auto;
    max-width: 80%; /* Ограничение ширины списка технологий, чтобы он не растягивался на всю ширину */
    border-top: 1px solid #ccc; /* Линия над использованными технологиями */
    padding-top: 50px; /* Отступ от линии до текста */
    transition: color 0.3s ease, transform 0.3s; /* Анимация для цвета и трансформации */
}

#projects .technologies-used i,
#projects .technologies-used img {
    margin-right: 10px; /* Отступ справа для каждого элемента */
    margin-left: 10px; /* Отступ слева для первого элемента */
    transition: transform 0.5s;
}

#projects .technologies-used i{
    font-size: 20px;
}

#projects .technologies-used:hover i, 
#projects .technologies-used:hover img {
    transform: scale(1.5);
}
/* ... */

